[package]
name = "plutus"
version = "0.1.0"
authors = ["theycallmemac <james.mcdermott89@gmail.com>"]
categories = ["command-line-interface","command-line-utilities","parsing","algorithms"]
homepage = "https://github.com/theycallmemac/plutus"
keywords = ["currency","conversion","cli"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/theycallmemac/plutus"

[[bin]]
name = "plutus"
test = false
doc = false

[dependencies]
clap = "2.26.0"
env_logger = "0.4.3"
log = "0.3.8"
failure = "0.1"
curl = "0.2.11"
json = "0.11.13"
