[package]
name = "convert"
version = "0.2.0"
authors = ["theycallmemac <james.mcdermott89@gmail.com>"]
description = "A command line tool written in rust which converts between currencies."
categories = ["command-line-interface","command-line-utilities","parsing","algorithms"]
homepage = "https://github.com/theycallmemac/convert"
keywords = ["currency","conversion","cli", "money"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/theycallmemac/convert"

[[bin]]
name = "convert"
test = false
doc = false

[dependencies]
clap = "2.26.0"
env_logger = "0.4.3"
log = "0.3.8"
failure = "0.1"
curl = "0.2.11"
json = "0.11.13"
serde_json = "0.6.0"
